Add menu to prepare for different movie lists

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+
+    <!-- Browse Movies Menu -->
+    <string name="action_switch_popular">Most Popular</string>
+    <string name="action_switch_highest_rated">Highest Rated</string>
 </resources>
