--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!-- Browse Movies Menu -->
     <string name="action_switch_popular">Most Popular</string>
     <string name="action_switch_highest_rated">Highest Rated</string>
+    <string name="action_switch_favorites">Favorites</string>
 
     <!-- Browse Movies Activity -->
     <string name="button_add_to_favorites">Add To Favorites</string>
