--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="action_switch_highest_rated">Highest Rated</string>
     <string name="action_switch_favorites">Favorites</string>
 
-    <!-- Browse Movies Activity -->
+    <!-- Movie Details Activity -->
     <string name="button_add_to_favorites">Add To Favorites</string>
     <string name="button_remove_from_favorites">Remove From Favorites</string>
 </resources>
