Improve UI by informing user about no favorite movies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Popular Movies</string>
 
     <!-- Browse Movies Activity -->
-    <string name="error_no_movies">Cannot load movies from the internet. Please try later.</string>
+    <string name="error_no_internet">Cannot load movies from the internet. Please try later.</string>
+    <string name="error_no_movies">There are no movies in this category.</string>
 
     <!-- Browse Movies Menu -->
     <string name="action_switch_popular">Most Popular</string>
