--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Popular Movies</string>
 
     <!-- Browse Movies Activity -->
@@ -13,6 +13,10 @@
     <!-- Movie Details Activity -->
     <string name="label_trailers">Trailers</string>
     <string name="label_reviews">Reviews</string>
+    <string name="label_original_title">(<xliff:g id="title" example="Fight Club">%s</xliff:g>)</string>
+    <string name="label_user_rating">User rating: <xliff:g id="rating" example="2">%s</xliff:g></string>
+    <string name="label_release_date">Release date: <xliff:g id="date" example="Jan 3, 2011">%s</xliff:g></string>
     <string name="button_add_to_favorites">Add To Favorites</string>
     <string name="button_remove_from_favorites">Remove From Favorites</string>
+    <string name="error_no_video_player">Cannot find video player app.</string>
 </resources>
